# underthesea-wasm

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  model-assets.json  package.json  tsconfig.json
.github/workflows/: ci.yml  github-packages.yml  publish.yml
crate/: BUILD.md  Cargo.toml
crate/src/: lib.rs
crate/src/crf/: mod.rs  serialization.rs
examples/: basic.ts
model/: features.json
scripts/: fetch-model.mjs
src/: character_map.json  index.ts  regex-tokenize.ts  token_map.json  tokenizer.ts
test/: tokenize.test.ts
wasm/: vntok_wasm.cjs  vntok_wasm.d.ts  vntok_wasm_bg.wasm.d.ts
