[package]
name = "vntok_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
byteorder = "1.5"
hashbrown = { version = "0.15", features = ["serde"] }
bincode = "1.3"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
